--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ defaults:
 email: makalatrezise@gmail.com
 description: Consume some nerdy nuggies to fuel your brain
 baseurl: cools
-url: makalatrezise.github.io
+url: https://makalatrezise.github.io
 theme: minima
 plugins:
 - jekyll-feed
