--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ collections:
     output: true
 defaults:
 - scope:
-    path: ''
+    path: 'projects.html'
     type: pages
   values:
     layout: default
