--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ defaults:
     layout: landing   
 email: makalatrezise@gmail.com
 description: Consume some nerdy nuggies to fuel your brain
-baseurl: cools
+baseurl: 
 url: https://makalatrezise.github.io
 theme: minima
 plugins:
