--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ defaults:
   values:
     layout: default
 - scope:
-    path: ''
+    path: 'bluewave.html'
     type: posts
   values:
     layout: bluewave
