--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ defaults:
 email: makalatrezise@gmail.com
 description: Consume some nerdy nuggies to fuel your brain
 baseurl: 
-url: 
+url: makalatrezise.github.io
 theme: minima
 plugins:
 - jekyll-feed
